# krait

./: .credo.exs  .dockerignore  .env.example  .gitignore  .krait-immutable  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.quickstart.yml  install.sh  mix.exs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.sandbox  docker-compose.test.yml  docker-compose.yml  quickstart-entrypoint.sh
docs/: release-readiness.md  secret-management.md  tutorial-first-evolution.md
docs/adr/: 001-allowlist-over-denylist.md  002-hardcoded-allowlist.md  003-no-shadow-mode.md  004-defmacro-banned.md  005-global-allowlist.md  006-ed25519-attestation.md  007-kill-switch-persistence.md  008-promotion-gated-capability-evolution.md
lib/: krait.ex  krait_web.ex
lib/krait/: application.ex  evolve_cooldown_server.ex  health_cache_server.ex  kill_switch.ex  kill_switch_state.ex  release.ex  repo.ex  setup_validation.ex
lib/krait_web/: auth.ex  endpoint.ex  gettext.ex  rate_limit_counter.ex  router.ex  (+1 more)
native/krait_analyzer/: Cargo.toml
native/krait_analyzer/src/: allowlist.rs  complexity.rs  hash.rs  lib.rs  parser.rs  rules.rs
native/krait_analyzer/src/lang/: go.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs
rules/: krait-agent.yaml
scripts/: e2e_test.exs  setup-prod-secrets.sh
test/: test_helper.exs
(+214 files in other folders)
