[package]
name = "krait_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "krait_analyzer"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
tree-sitter = "0.24"
tree-sitter-elixir = "0.3"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.23.4"
tree-sitter-rust = "0.23.3"
blake3 = "1"
regex = "1"
streaming-iterator = "0.1"
